<resources>
    <string name="app_name">front</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">From the Square world,\nHello, %1$s!</string>
    <string name="btn_transport">대중교통</string>
    <string name="btn_audio_guide">음향 유도기</string>
    <string name="btn_position_derrivation">유 음성 유도 기능입니다. 음향신호기 및 음성유도기에서 음성이 나옵니다.</string>
    <string name="btn_signal_guide">신 신호 안내 기능입니다. 신호기의 현재 신호에 대한 음성이 나옵니다.</string>
    <string name="btn_scan_start">주변에 있는 스마트 음향신호기들을 검색합니다.</string>

    <string name="btn_iot_home">iot 스마트홈</string>
    <string name="title_activity_my_iot">스마트 IoT 제어</string>
    <string name="btn_setting">설정</string>
    <string name="btn_transport_description">교통안내 기능입니다. 자세한 설명이 필요하시다면 꾹 누르십시오.</string>
    <string name="btn_audio_guide_description">음향 유도기 버튼입니다. 자세한 설명이 필요하시다면 꾹 누르십시오.</string>
    <string name="btn_iot_description">AI 스피커와 연결하여 원격 조종하는 기능입니다. 자세한 설명이 필요하시다면 꾹 눌러주십시오.</string>
    <string name="btn_brightnessDescription1">밝기를 줄여주는 버튼입니다.</string>
    <string name="btn_brightnessDescription2">밝기를 올려주는 버튼입니다.</string>
    <string name="btn_btnSaturationDescription1">채도를 줄여주는 버튼입니다.</string>
    <string name="btn_btnSaturationDescription2">채도를 올려주는 버튼입니다.</string>

    <string name="btn_setting_description">설정 버튼입니다</string>
    <string name="btn_saved_path">저장된 경로로 탐색</string>
    <string name="btn_saved_path_description">저장된 경로로 탐색 버튼입니다. 클릭 시 미리 지정해둔 경로에 대한 경로 안내가 진행됩니다.</string>
    <string name="btn_new_path">새로운 경로 탐색 API</string>
    <string name="btn_new_path_description">"새로운 경로 탐색버튼입니다. 새로운 곳을 갈 때, 어떤 버스를 타야 하는지, 어떤 지하철을 타야 하는지 알려줍니다. "</string>
    <string name="undo">뒤로가기</string>
    <string name="default_text">기본 텍스트</string>
    <string name="btn_audio_guide_btn1">음성 유도기 동작, 음향 신호기의 유도 버튼입니다. \n음성 유도기 안내 기능과 횡단보도의 위치로 유도하는 기능이 들어있습니다.</string>
    <string name="btn_audio_guide_btn2">음향 신호기 신호 버튼입니다. 신호기에 의해 횡단보도를 횡단할 수 있게 음성으로 도와주는 버튼입니다.</string>
    <string name="buttonSTT">주소를 말씀해주십시오.</string>
    <string name="start_address">출발지:</string>
    <string name="end_address">목적지:</string>
    <string name="latitude_end">Latitude-End:</string>
    <string name="longitude_end">Longitude-End:</string>
    <string name="latitude_start">Latitude-Start:</string>
    <string name="longitude_start">Longitude-Start:</string>
    <string name="addressEndTextView">목적지를 입력하십시오.</string>
    <string name="addressStartTextView">출발지를 입력하십시오.</string>
    <string name="start_address_description">출발지.\n다음에 있을 칸에서 출발지를 입력할 수 있습니다.</string>
    <string name="end_address_description">목적지.\n다음에 있을 칸에서 목적지를 입력할 수 있습니다.</string>
    <string name="get_transport_time">실시간 대중교통정보를 불러오는 중입니다.</string>

    <string name="defaultText">기본 텍스트</string>

    <string name="transitCount">%d 회</string>
    <string name="yes">예</string>
    <string name="no">아니요</string>
    <string name="doYouWantSave">경로를 저장하시겠습니까?</string>
    <string name="plzEnterAddressName">별명을 지정하십시오.</string>
    <string name="nickName">별명</string>
    <string name="complete">완료</string>
    <string name="disable">취소</string>
    <string name="favouritePathStarBtt">즐겨찾기 지정 버튼, 클릭 시 본 경로가 최상단에 노출됩니다. 여러개를 설정하였을 시, 가장 최근에 사용한 즐겨찾기 경로가 노출됩니다.</string>
    <string name="askFormBttDescription">문의 버튼, 클릭시 이메일을 볼 수 있습니다. 이용해주셔서 감사합니다.</string>
    <string name="askFormBtt">문의용 연락처</string>
    <string name="profileText">계정 설정</string>
    <string name="faqText">FAQ</string>
    <string name="thisVersionText">현재 버전</string>
    <string name="code">코드</string>
    <string name="n_nn">n시간 nn분</string>
    <string name="n">n회</string>
    <string name="FAQText">Q1. 어쩌고 저쩌고  \n A1. 어쩌고 저쩌고 \n Q2. 어쩌고 저쩌고 \n A2. 어쩌고 저쩌고</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="myIOTlist">내 IoT 기기 목록</string>
    <string name="defaultDevice">Device Name</string>
    <string name="iotmanage">내 IOT 기기 관리</string>
    <string name="iot_add">IoT 기기 추가</string>
    <string name="iot_manage_content_description">내 IOT 기기를 관리하는 곳입니다. 더블 클릭 시 이전에 연결해둔 IoT 기기 목록을 보여주는 창으로 넘어갑니다.</string>
    <string name="iot_iot_smartthings">IoT 기기 추가 버튼입니다. 클릭 시 IoT 기기를 스마트 워치 딴에서 추가할 수 있도록 smartThings로 이동합니다.</string>
    <string name="start_ai">음성 명령 시작</string>
    <string name="playOrPause">재생 또는 일시정지 버튼입니다</string>
    <string name="brighten_text">밝기 조절</string>
</resources>