<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDark"
    tools:context=".presentation.MainActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center_horizontal">

            <!-- 대중교통 버튼 -->
            <ImageButton
                android:id="@+id/btn_transport"
                android:layout_width="152dp"
                android:layout_height="60dp"
                android:text="@string/btn_transport"
                android:textSize="12sp"
                android:background="@drawable/traffic_doc_btn3"
                android:textColor="#00000000"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/btn_transport_description"/>

            <!-- 음향 유도기 버튼 -->
            <ImageButton
                android:id="@+id/btn_audio_guide"
                android:layout_width="152dp"
                android:layout_height="60dp"
                android:text="@string/btn_audio_guide"
                android:textSize="12sp"
                android:background="@drawable/blinker_btn3"
                android:textColor="#00000000"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/btn_audio_guide_description"/>

            <!-- IoT 스마트 홈 버튼 -->
            <ImageButton
                android:id="@+id/btn_iot_home"
                android:layout_width="152dp"
                android:layout_height="60dp"
                android:text="@string/btn_iot_home"
                android:textSize="12sp"
                android:background="@drawable/iot_home_btn3"
                android:textColor="#00000000"
                android:layout_marginBottom="20dp"
                android:contentDescription="@string/btn_iot_description"/>

            <!-- 설정 버튼 -->
            <ImageButton
                android:id="@+id/btn_setting"
                android:layout_width="152dp"
                android:layout_height="60dp"
                android:text="@string/btn_setting"
                android:textSize="12sp"
                android:textColor="#00000000"
                android:contentDescription="@string/btn_setting_description"
                android:background="@drawable/setting_btn2">
            </ImageButton>
        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
