<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".iot.HomeIotActivity"
    android:background="@color/backgroundDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- ➕ My IoT 페이지 이동 버튼 -->
        <ImageButton
            android:id="@+id/btnMyIot"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:minWidth="20dp"
            android:minHeight="40dp"
            android:layout_margin="5dp"
            android:text="@string/iotmanage"
            android:contentDescription="@string/iot_manage_content_description"
            android:layout_marginBottom="10dp"
            android:src="@drawable/myiot_btn2"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"/>

        <!-- 🔄 IoT 추가 버튼 (SmartThings 앱 이동) -->
        <ImageButton
            android:id="@+id/btnAddDevice"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:minWidth="20dp"
            android:minHeight="40dp"
            android:text="@string/iot_add"
            android:layout_margin="5dp"
            android:backgroundTint="@android:color/holo_blue_light"
            android:textColor="@android:color/white"
            android:layout_marginBottom="12dp"
            android:src="@drawable/manage_myiot_btn2"
            android:scaleType="fitCenter"
            android:background="@android:color/transparent"
            android:contentDescription="@string/iot_iot_smartthings"/>

        <!-- 🎤 음성 명령 버튼 -->
        <Button
            android:id="@+id/btnVoiceControl"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/start_ai"
            android:padding="12dp"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
