<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundDark"
    tools:context=".presentation.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"  android:layout_height="wrap_content" android:gravity="center"
        android:orientation="vertical"
        android:paddingBottom="0dp" app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btn_saved_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@android:color/transparent"
            android:src="@drawable/saved_root"
            android:contentDescription="@string/btn_saved_path_description"
            android:text="@string/btn_saved_path"
            android:textColor="#000000"
            android:textSize="12sp" />

        <ImageButton
            android:id="@+id/btn_new_path"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="0dp"
            android:background="@android:color/transparent"
            android:src="@drawable/new_root"
            android:contentDescription="@string/btn_new_path_description"
            android:text="@string/btn_new_path"
            android:textColor="#000000"
            android:textSize="12sp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>