<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/some_chip"
    android:id="@+id/savedPathRootLayout"
    android:padding="10dp"
    android:orientation="vertical"
    android:layout_marginTop="5dp">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="30dp"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:minWidth="80dp"
            android:textSize="13sp"
            android:textColor="@android:color/white"
            android:text="@string/default_text"
            android:id="@+id/addressNicknameTextview"
            android:padding="5dp"
            android:layout_weight="1"
            android:maxLines="1"
            android:ellipsize="end"
            />
        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:contentDescription="@string/favouritePathStarBtt"
            android:src="@drawable/star"
            android:scaleType="fitStart"
            android:background="@android:color/transparent"
            android:padding="5dp"
            android:layout_marginEnd="5dp"
            android:id="@+id/favouritePathStarBtt"
            app:tint="#cccccc"
            android:maxLines="1"
            android:ellipsize="end"
            />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:id="@+id/departureTextView"
        android:text="@string/start_address"
        android:textColor="@android:color/white"
        android:textSize="12sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:id="@+id/destinationTextView"
        android:text="@string/end_address"
        android:textColor="@android:color/white"
        android:textSize="12sp" />
</LinearLayout>