<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="152dp"
    android:layout_height="wrap_content"
    android:minHeight="90dp"
    android:minWidth="152dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    tools:context=".transportation.dialog.TransSavedConfirmDialogActivity"
    android:orientation="vertical"
    android:background="@drawable/setting_view"
    android:padding="10dp"
    android:layout_margin="20dp">

    <TextView
        android:id="@+id/savedConfirmTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:minHeight="20sp"
        android:textSize="12sp"
        android:text="@string/plzEnterAddressName"
        android:contentDescription="@string/plzEnterAddressName"
        android:textColor="@android:color/black" />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="@string/nickName"
        android:minHeight="48dp"
        android:padding="2dp"
        android:layout_marginTop="5dp"
        android:background="@android:color/white"
        android:inputType="textMultiLine"
        android:textColor="@android:color/black"
        android:id="@+id/addressNickNameEditText"
        android:hint="@string/nickName"
        android:textSize="12sp"
        android:textColorHint="#111111"
         />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="70dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="end">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/yes"
            android:contentDescription="@string/yes"
            android:minWidth="48dp"
            android:textSize="12sp"
            android:textColor="@android:color/black"
            android:layout_margin="2dp"
            android:src="@drawable/setting_view"
            android:textAlignment="center"
            android:background="@drawable/confirm_border" />

        <TextView
            android:layout_width="wrap_content"
            android:minWidth="48dp"
            android:layout_height="wrap_content"
            android:text="@string/no"
            android:contentDescription="@string/no"
            android:textSize="12sp"
            android:textColor="@android:color/black"
            android:layout_margin="2dp"
            android:background="@drawable/confirm_border"
            android:textAlignment="center"/>
    </LinearLayout>

</LinearLayout>