<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="162dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:minHeight="100dp"
    android:background="@drawable/some_chip"
    android:id="@+id/someRootLayout2"
    android:padding="7dp"
    android:orientation="vertical"
    android:layout_marginBottom="10dp"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="5dp">
        <TextView
            android:id="@+id/mainTransitTypesView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:text="@string/defaultText"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            android:layout_weight="1"
            android:ellipsize="end"
            android:maxLines="1"
            />
        <TextView
            android:id="@+id/transitCountView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:padding="2dp"
            android:text="@string/n"
            android:textColor="#cccccc"
            android:textSize="8sp"
            android:layout_gravity="center_vertical"
            />
        <TextView
            android:id="@+id/totalTimeView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:text="@string/n_nn"
            android:textAlignment="textEnd"
            android:textColor="@android:color/white"
            android:textSize="10sp"
            android:layout_gravity="end"
            />
    </LinearLayout>
    <TextView
        android:id="@+id/detatiledPathView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/defaultText"
        android:textColor="#cccccc"
        android:textSize="11sp" />
    <TextView
        android:id="@+id/predictTimeView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="5dp"
        android:paddingEnd="5dp"
        android:text="@string/code"
        android:textSize="10sp"
        android:textColor="#cccccc"
        android:textAlignment="textEnd"
        android:gravity="bottom|end"
        android:layout_weight="1"
        android:maxHeight="40dp"
        android:scrollbars="vertical"
        />
</LinearLayout>