<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minHeight="90dp"
    android:minWidth="152dp"
    android:layout_gravity="center"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    tools:context=".transportation.dialog.TransSavedDialogActivity"
    android:orientation="vertical"
    android:background="@drawable/setting_view"
    android:padding="10dp" >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:minHeight="50sp"
        android:textSize="12sp"
        android:text="@string/doYouWantSave"
        android:gravity="center"
        android:textColor="@android:color/black" />
    <LinearLayout
        style="?android:attr/buttonBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minWidth="70dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:gravity="end">

        <Button
            android:id="@+id/YesSavedBtt"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/yes"
            android:textSize="12sp"
            android:textColor="black"
            android:layout_margin="2dp"
            android:src="@drawable/setting_view"
            android:background="@android:color/transparent" />

        <Button
            android:id="@+id/NoSavedBtt"
            android:layout_width="wrap_content"
            android:layout_height="20dp"
            android:text="@string/no"
            android:textSize="12sp"
            android:textColor="black"
            android:layout_margin="2dp"
            android:src="@drawable/setting_view"
            android:background="@android:color/transparent"/>
    </LinearLayout>

</LinearLayout>