<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:minHeight="170dp"
    android:minWidth="170dp"
    tools:context=".transportation.TransportationSavedPathActivity">

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center_horizontal">

            <!-- 임시 버튼, 추후 삭제 예정 -->
            <TextView
                android:id="@+id/some_root_thing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@android:color/white"
                android:textSize="16sp"
                android:padding="8dp"
                android:gravity="center"
                android:contentDescription=""
                android:background="@drawable/box_border"
                android:text="@string/default_text" />

            <!-- 동적 버튼 -->
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/some_chip"
                android:id="@+id/savedPathRootLayout"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_marginTop="5dp">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minHeight="30dp"
                    android:orientation="horizontal"
                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:minWidth="80dp"
                        android:textSize="13sp"
                        android:textColor="@android:color/white"
                        android:text="@string/default_text"
                        android:id="@+id/addressNicknameTextview"
                        android:padding="5dp" />
                    <ImageView
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:contentDescription="@string/favouritePathStarBtt"
                        android:src="@drawable/star"
                        android:scaleType="fitStart"
                        android:background="@android:color/transparent"
                        android:padding="5dp"
                        android:layout_marginEnd="5dp"
                        android:id="@+id/favouritePathStarBtt"
                        app:tint="#cccccc"
                        />
                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:id="@+id/departureTextView"
                    android:text="@string/start_address"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="5dp"
                    android:paddingRight="5dp"
                    android:id="@+id/destinationTextView"
                    android:text="@string/end_address"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>